# OpenFace

./: .gitignore  CMakeLists.txt
exe/FaceLandmarkImg/: CMakeLists.txt  FaceLandmarkImg.cpp
exe/FaceLandmarkVid/: CMakeLists.txt  FaceLandmarkVid.cpp  start_FaceLandmarkVid.sh.in
exe/FaceLandmarkVidMulti/: CMakeLists.txt  FaceLandmarkVidMulti.cpp
exe/FeatureExtraction/: CMakeLists.txt  FeatureExtraction.cpp
exe/Recording/: Record.cpp
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/FaceAnalyser/include/: FaceAnalyser.h  Face_utils.h  GazeEstimation.h  SVM_dynamic_lin.h  SVM_static_lin.h  SVR_dynamic_lin_regressors.h  SVR_static_lin_regressors.h
lib/local/FaceAnalyser/src/: FaceAnalyser.cpp  Face_utils.cpp  GazeEstimation.cpp  SVM_dynamic_lin.cpp  SVM_static_lin.cpp  SVR_dynamic_lin_regressors.cpp  SVR_static_lin_regressors.cpp
lib/local/LandmarkDetector/: CMakeLists.txt
lib/local/LandmarkDetector/include/: CCNF_patch_expert.h  LandmarkCoreIncludes.h  LandmarkDetectionValidator.h  LandmarkDetectorFunc.h  LandmarkDetectorModel.h  LandmarkDetectorParameters.h  LandmarkDetectorUtils.h  PAW.h  PDM.h  Patch_experts.h  SVR_patch_expert.h
lib/local/LandmarkDetector/src/: CCNF_patch_expert.cpp  LandmarkDetectionValidator.cpp  LandmarkDetectorFunc.cpp  LandmarkDetectorModel.cpp  LandmarkDetectorParameters.cpp  LandmarkDetectorUtils.cpp  PAW.cpp  PDM.cpp  Patch_experts.cpp  SVR_patch_expert.cpp
